# js-function-promisify

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: callback.rs  callback_future.rs  callback_kind.rs  callback_pair.rs  callback_wrapper.rs  closure_kind.rs  lib.rs  promise_wrapper.rs
tests/: wasm.rs
