[package]
authors = ["Emily Curry <emily@curry.sh>"]
edition = "2018"
license = "MIT"
name = "js-function-promisify"
version = "0.1.2"

[dependencies]
js-sys = {version = "^0.3.0"}
wasm-bindgen = {version = "^0.2.73"}

[dev-dependencies]
wasm-bindgen-test = "^0.3.23"
web-sys = {version = "^0.3.0", features = ["IdbFactory", "IdbRequest", "IdbOpenDbRequest", "WorkerGlobalScope"]}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
