[package]
authors = ["Emily Curry <emily@curry.sh>"]
categories = ["wasm", "asynchronous"]
description = "A library for working with js-sys functions as futures"
edition = "2018"
homepage = "https://github.com/emily-curry/js-function-promisify"
keywords = ["wasm", "asynchronous", "js"]
license = "MIT"
name = "js-function-promisify"
readme = "README.md"
repository = "https://github.com/emily-curry/js-function-promisify"
version = "0.2.0"

[dependencies]
js-sys = {version = "^0.3.0"}
wasm-bindgen = {version = "^0.2.73"}

[dev-dependencies]
wasm-bindgen-test = "^0.3.23"
web-sys = {version = "^0.3.0", features = ["Window", "IdbFactory", "IdbRequest", "IdbOpenDbRequest"]}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
